--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+			  <img class="moviePic" src="https://media.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0/1519855918965?e=2147483647&v=beta&t=J3kUMZwIphc90TFKH5oOO9Sa9K59fimgJf-s_okU3zs" alt="Movie Poster"> 
+			  <p class="movieDetail">Movie Description</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
